# AgenticFlow

./: .gitignore  404.html  LICENSE  README.md  THIRD_PARTY_LICENSES.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
concepts/: index.html
concepts/execution-spec/: index.html
concepts/flow-runner/: index.html
concepts/modifiers/: index.html
concepts/phase/: index.html
context-resolution/: index.html
docs/en/: context-resolution.md  index.md
docs/en/concepts/: execution-spec.md  flow-runner.md  index.md  modifiers.md  phase.md
docs/en/examples/: multi-agent.md  review-loop.md
docs/en/getting-started/: first-flow.md  installation.md  quickstart.md
docs/en/guides/: chatkit.md  cli-patterns.md  streaming.md  structured-output.md  testing.md
docs/en/reference/: api.md  sdk-compatibility.md
docs/examples/: __init__.py  agenticflow_chatkit.py  agenticflow_cli.py  agenticflow_flow.py  declaration_vs_execution.py  pure_sdk_chatkit.py  quickstart_basic.py
examples/multi-agent/: index.html
examples/review-loop/: index.html
getting-started/first-flow/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/chatkit/: index.html
guides/cli-patterns/: index.html
guides/streaming/: index.html
guides/structured-output/: index.html
guides/testing/: index.html
javascripts/: mermaid-config.js
reference/api/: index.html
reference/sdk-compatibility/: index.html
sample/: quickstart.py
sample/AgenticTranscoder/: .env.example  .gitignore  README.md  pyproject.toml
sample/AgenticTranscoder/examples/: SKILLS.md
sample/AgenticTranscoder/examples/basic/: __init__.py  agent_specs.py  flow.py  pyproject.toml  source.py
sample/AgenticTranscoder/examples/basic/frontend/: .env.example
sample/AgenticTranscoder/examples/basic/tests/: __init__.py  test_flow.py
sample/AgenticTranscoder/examples/guardrail/: __init__.py  agent_specs.py  flow.py  guardrails_config.json  pyproject.toml  server.py  source.py
sample/AgenticTranscoder/examples/guardrail/frontend/: README.md  index.html
sample/AgenticTranscoder/examples/guardrail/frontend/src/: App.tsx
sample/AgenticTranscoder/examples/guardrail/tests/: test_flow.py  test_server.py
sample/AgenticTranscoder/examples/router/: __init__.py  agent_specs.py  flow.py  pyproject.toml  server.py  source.py
sample/AgenticTranscoder/examples/router/frontend/: index.html
sample/AgenticTranscoder/examples/router/frontend/src/: App.tsx
sample/AgenticTranscoder/examples/router/frontend/src/lib/: config.ts
sample/AgenticTranscoder/examples/router/tests/: __init__.py  conftest.py  test_flow.py
sample/AgenticTranscoder/examples/websearch/: __init__.py  agent_specs.py  flow.py  pyproject.toml  server.py  source.py
sample/AgenticTranscoder/examples/websearch/frontend/: index.html
sample/AgenticTranscoder/examples/websearch/frontend/src/: App.tsx
sample/AgenticTranscoder/examples/websearch/tests/: __init__.py  conftest.py  test_flow.py
sample/AgenticTranscoder/fixtures/: builder_agent.py
sample/AgenticTranscoder/src/agentic_transcoder/: __init__.py  cli.py  flow.py  tools.py  types.py
sample/AgenticTranscoder/src/agentic_transcoder/agents/: __init__.py  tools.py
sample/AgenticTranscoder/src/agentic_transcoder/agents/coder/: __init__.py  agent.py  instructions.py
sample/AgenticTranscoder/src/agentic_transcoder/agents/reflector/: __init__.py  agent.py  instructions.py
sample/AgenticTranscoder/src/agentic_transcoder/console/: __init__.py  display.py  handler.py  parsers.py
sample/AgenticTranscoder/src/agentic_transcoder/knowledge/: agentic-flow-guidelines.md  chatkit-integration.md  transformation-rules.md
sample/AgenticTranscoder/src/agentic_transcoder/template/: README.md  agent_specs.py  flow.py  pyproject.toml  server.py  store.py
sample/AgenticTranscoder/src/agentic_transcoder/template/frontend/: .gitignore  index.html
sample/AgenticTranscoder/src/agentic_transcoder/template/frontend/src/: App.tsx
sample/AgenticTranscoder/src/agentic_transcoder/template/tests/: test_flow.py  test_server.py
sample/AgenticTranscoder/tests/: test_cli.py  test_integration.py  test_mock.py  test_structure.py
sample/guide/: __init__.py  __main__.py  cli.py  cli.tcss  flow.py  server.py  store.py
sample/guide/frontend/: .env.example  README.md  index.html
sample/guide/frontend/src/: App.tsx
sample/guide/frontend/src/components/: ChatKitPanel.tsx
sample/guide/frontend/src/lib/: config.ts
scripts/: update_line_counts.py
search/: search_index.json
src/agentic_flow/: __init__.py  agent.py  chatkit.py  phase.py  runner.py  types.py  utils.py
stylesheets/: extra.css
tests/: conftest.py  test_context_control.py  test_core_concepts.py  test_docs_examples.py  test_execution_model.py  test_execution_spec_modifiers.py  test_python_semantics.py  test_sdk_passthrough.py  test_semantics.py  test_unit_scope.py
