[project]
name = "chat-agent"
version = "0.1.0"
description = "Chat Agent - transformed from AgentBuilder"
requires-python = ">=3.12"
dependencies = [
    "agentic-flow",
    "openai-agents>=0.3.2",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-dotenv>=1.0",
    "chatkit",
    "httpx>=0.27",
]

# Path: workspace/{project}_af → workspace → agentic_transcoder → sample → Agentic Flow
[tool.uv.sources]
agentic-flow = { path = "../../../..", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
guardrails = [
    "openai-guardrails>=0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "../../../../src"]
testpaths = ["tests"]
